Allow user to submit task to DB

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h3 class="light-blue-text text-darken-4 center-alighn">All Tasks</h3>
 
 <ul class="collapsible">
     {% for task in tasks %}
@@ -16,6 +17,7 @@
             <span>
                 <strong>{{ task.category_name }}</strong>
                 <p>{{ task.task_description }}</p>
+                <p><em>by: {{ task:created_by }}</em></p>
             </span>
         </div>
         {% endfor %}
