--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -4,7 +4,8 @@
 
 <h3 class="light-blue-text text-darken-4 center-alighn">Add Task</h3>
 <div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+        <!-- category selection -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
@@ -17,6 +18,7 @@
                 <label>Materialize Select</label>
             </div>
         </div>
+        <!-- task name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
@@ -25,6 +27,7 @@
                 <label for="task_name">Task Name</label>
             </div>
         </div>
+        <!--task description-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
@@ -33,8 +36,8 @@
                 <label for="task_desciption">Task Description</label>
             </div>
         </div>
-
-        <div class="row">
+        <!--due date picker-->
+    <div class="row">
     <form class="col s12" method="POST" action="">
         <div class="row">
             <div class="input-field col s12">
@@ -44,7 +47,7 @@
                 <label for="due_date">Due Date </label>
             </div>
         </div>
-
+        <!--is urgent toggle-->
         <div class="row">
             <div class="input-field col s12">
                 <div class="switch">
@@ -55,6 +58,14 @@
                         Is urgent
                     </label>
                 </div>
+            </div>
+        </div>
+        <!--submit button-->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    Add Task <i class="fas fas-plus-square right"></i>
+                </button>
             </div>
         </div>
     </form>
