Add custom Materialize select validation

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-alighn">All Tasks</h3>
+<h3 class="light-blue-text text-darken-4 center-align">All Tasks</h3>
 
 <ul class="collapsible">
     {% for task in tasks %}
@@ -10,15 +10,13 @@
         <strong>{{ task.task_name }}</strong>: {{ task.due_date }}   
         {% if task.is_urgent == "on" %}
         <i class="fas fa-exclamation-circle light-blue-text text-lighten-2 tooltipped"
-        data-position="right" data-tooltip="URGENT!"></i>
+                data-position="right" data-tooltip="URGENT!"></i>
         {% endif %}
         </div>
         <div class="collapsible-body">
-            <span>
                 <strong>{{ task.category_name }}</strong>
                 <p>{{ task.task_description }}</p>
-                <p><em>by: {{ task:created_by }}</em></p>
-            </span>
+                <p><em>by: {{ task.created_by }}</em></p>
         </div>
         {% endfor %}
     </li>
