--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-alighn">Add Task</h3>
+<h3 class="light-blue-text text-darken-4 center-align">Add Task</h3>
 <div class="row card-panel grey lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
         <!-- category selection -->
@@ -15,7 +15,7 @@
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                     {% endfor %}
                 </select>
-                <label>Materialize Select</label>
+                <label for="category_name">Category Name</label>
             </div>
         </div>
         <!-- task name -->
@@ -37,8 +37,6 @@
             </div>
         </div>
         <!--due date picker-->
-    <div class="row">
-    <form class="col s12" method="POST" action="">
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-calender-alt prefix light-blue-text text-darken-4"></i>
