--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -39,7 +39,7 @@
         <!--due date picker-->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-calender-alt prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
                 <input id="due_date" name="due_date"
                  type="text" class="datepicker validate" required>
                 <label for="due_date">Due Date </label>
